[package]
name = "j9-sys"
version = "0.1.4"
authors = ["ynqa <un.pensiero.vano@gmail.com>"]
edition = "2021"
description = "Rust bindings for jq"
repository = "https://github.com/ynqa/j9"
license = "MIT"
readme = "README.md"

[dependencies]

[build-dependencies]
anyhow = "1.0.80"
autotools = "0.2.6"
bindgen = "0.69.4"
walkdir = "2.5.0"
