[package]
name = "j9"
version = "0.1.2"
authors = ["ynqa <un.pensiero.vano@gmail.com>"]
edition = "2021"
description = "Rust interface for jq-based JSON processing"
repository = "https://github.com/ynqa/j9"
license = "MIT"
readme = "README.md"
[lib]
name = "j9"
path = "src/lib.rs"

[dependencies]
j9-sys = { path = "../j9-sys", version = "0.1.2" }
thiserror = "1.0.57"

[dev-dependencies]
anyhow = "1.0.80"
